--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start:app": "npx ts-node ./core/crud.ts",
     "dev": "nodemon --ext ts,tsx --exec 'npm run start:app'",
+    "dev:next": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,10 +17,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.5.0",
+    "@types/react": "18.2.20",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
     "@types/uuid": "^9.0.2",
+    "next": "^13.4.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.1.6",
     "uuid": "^9.0.0"
   }
